# baulk

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ReadMe.md  ReadMe.zh-CN.md  clang-tidy.bat  clang-tidy.ps1  compile_flags.txt  parserev.ps1
.github/: README.md
config/: baulk.buckets.json  baulk.json  baulkenv.json  buckets.lock.json  kotlin-native.json  kotlin-native.local.json  zulu.json  zulu14.json
docs/: Concept.zh-CN.md  changelog.md  help.md
example/: vfsenv.hpp
extension/: CMakeLists.txt  README.md
extension/baulk-extension/: CMakeLists.txt  shellext.cc  shellext.rc
extension/unscrew-extension/: CMakeLists.txt  shellext.cc  shellext.rc
include/: archive.hpp  baulkenv.hpp  baulkmisc.hpp  baulkrev.hpp  baulkversion.h.cmake  blake3.h  jsonex.hpp  pwsh.hpp  regutils.hpp  revision.h.cmake  tar.hpp  time.hpp  version.hpp  xml.hpp  zip.hpp
lib/: CMakeLists.txt
lib/archive/: CMakeLists.txt  archive.cc  archive.hpp  brotli.hpp  bzip.hpp  ced.cc  crc32.cc  extractor.cc  extractor.hpp  format.cc  gzip.hpp  oldzip.cc  tar.hpp  zip.cc  zip.hpp  zlib.hpp
lib/archive/7z/: 7z.cc
lib/archive/ced/: CMakeLists.txt  README.md
lib/archive/ced/compact_enc_det/: compact_enc_det.cc  compact_enc_det_generated_tables.h
lib/archive/chromium_zlib/: CMakeLists.txt  adler32.c  chromium_zlib.lock.txt  cpu_features.c
lib/archive/chromium_zlib/google/: zip_internal.cc  zip_reader.cc
lib/archive/deflate64/: README  VERSION  compile_flags.txt  deflate64.c  deflate64.h  deflate64.hpp  deflate64_internal.h  deflate64internal.hpp  infback9.c  infback9.h  inffix9.h  inflate9.h  inftree9.c  inftree9.h
lib/archive/inflate/: inflate.cc  inflate.hpp  inflateinternal.hpp
lib/archive/liblzma/: Makefile.in
lib/archive/liblzma/api/: Makefile.in
lib/archive/liblzma/common/: sysdefs.h  tuklib_physmem.c
lib/archive/lzmasdk/: CMakeLists.txt
lib/archive/lzmasdk/C/: LzFind.c
lib/archive/lzmasdk/DOC/: lzma-history.txt  lzma-sdk.txt
lib/archive/minizip/: compile_flags.txt  minizip.lock.txt  mz.h  mz_strm.c  mz_strm.h  mz_strm_deflate64.c  mz_strm_deflate64.h  mz_strm_os.h  mz_strm_os_posix.c  mz_strm_os_win32.c  mz_strm_zstd.c  mz_zip.c  mz_zip_rw.c  mz_zip_rw.h  unzip.h  zip.h
lib/archive/ppmd/: 7zTypes.h  CMakeLists.txt
lib/archive/tar/: ReadMe.md  brotli.cc  brotli.hpp  bzip.cc  bzip.hpp  decompressor.cc  format.cc  gzip.cc  gzip.hpp  tar.cc  tarinternal.hpp  xz.cc  xz.hpp  zstd.cc  zstd.hpp
lib/archive/xz/: CMakeLists.txt
lib/archive/xz/src/liblzma/: Makefile.in
lib/archive/xz/src/liblzma/api/: Makefile.in
lib/archive/zip/: Crc32.cpp  aes.cc  brotli.cc  bzip.cc  bzlib.cc  decompress.cc  deflate.cc  deflate64.cc  filemode.cc  inflate64.cc  inflate64.hpp  path.cc  ppmd.cc  xz.cc  zip.cc  zipinternal.hpp  zlib.cc  zstd.cc
lib/archive/zip/images/: winzipaes.md
lib/archive/zlib/: CMakeLists.txt  VERSION  chromium_zlib.lock.txt  cpu_features.c  zconf-ng.h  zconf.h  zlib-ng.h  zlib.h
lib/archive/zlib/contrib/optimizations/: insert_string.h
lib/archive/zlib/test/: CMakeLists.txt  crc32_test_strings_p.h  infcover.c  test_compare256.cc  test_crc32.cc  test_crc32_fold_copy.cc
lib/archive/zlib/test/add-subdirectory-project/: CMakeLists.txt
lib/archive/zlib/test/benchmarks/: CMakeLists.txt  benchmark_compare256.cc  benchmark_compare256_rle.cc  benchmark_slidehash.cc  benchmark_uncompress.cc
lib/archive/zlib/test/fuzz/: CMakeLists.txt
lib/archive/zstd/dll/example/: fullbench-dll.vcxproj
lib/mem/: CMakeLists.txt  mem.cc
manifest/: baulk.env  system-install.env  user-install.env
res/: ReadMe.md
test/: 7z.json  CMakeLists.txt  SDKManifest.xml  aversion.cc  brand_test.cc  chdirtime.cc  cpuid.cc  cred.cc  decodemsi.cc  download.cc  ext.cc  extract.cc  extract_header.cc  fetchbucket.ps1  filenamdecode.cc  find7z.cc  fs.cpp  fsmutex.cc  genlinksrc.cc  indicators_test.cc  linkmeta.cc  neofetch.cc  out.cc  packaged.cc  parsejson.cc  parsepax.cc  pathextension.cc  pb1.cc  pb2.cc  regsdk.cc  repols.cc  titlebar.cc  udir.cc  untar.cc  unzip.cc  vfsenv.cc  vsenv.cc  wmic.cc  xversion.cc
tools/baulk/: 7z.cc  CMakeLists.txt  baulk-update.cc  baulk-update.rc  baulk.cc  baulk.hpp  baulk.manifest  baulk.md  baulk.rc  baulkargv.hpp  baulkenv.cc  bucket.cc  bucket.hpp  commands.b3sum.cc  commands.brand.cc  commands.bucket.cc  commands.bucket.old.cc  commands.cleancache.cc  commands.echo.cc  commands.exec.cc  commands.extract.cc  commands.freeze.cc  commands.help.cc  commands.hpp  commands.info.cc  commands.install.cc  commands.list.cc  commands.remove.cc  commands.search.cc  commands.sha256sum.cc  commands.uninstall.cc  commands.untar.cc  commands.unzip.cc  commands.update.cc  commands.upgrade.cc  commands.version.cc  compiler.cc  compiler.hpp  context.cc  decompress.cc  (+40 more)
tools/baulk-dock/: CMakeLists.txt  README.md  ReadMe.md  app.cc  app.hpp  appenv.cc  appui.cc  appui.hpp  apputils.cc  baulk-dock.cc  baulk-dock.rc  resource.h
tools/baulk-exec/: CMakeLists.txt  baulk-exec.cc  baulk-exec.hpp  baulk-exec.rc  executor.cc
tools/baulk-lnk/: CMakeLists.txt  baulk-lnk.cc  baulk-lnk.hpp  baulk-lnk.rc  baulk-winlnk.cc  baulk-winlnk.rc  baulk.linkmeta.json
tools/baulk-migrate/: CMakeLists.txt  baulk-migrate.cc  baulk-migrate.manifest  baulk-migrate.rc  main.cc  migrate.cc  migrate.hpp
tools/baulk-terminal/: CMakeLists.txt  baulk-terminal.cc  baulk-terminal.hpp  baulk-terminal.rc  env.cc  trace.cc
tools/baulk-update/: CMakeLists.txt  baulk-update.cc  baulk-update.hpp  baulk-update.manifest  baulk-update.rc  download.cc  executor.cc  executor.hpp  zip.cc
tools/baulkterminal/: CMakeLists.txt  baulkterminal.cc  baulkterminal.hpp  baulkterminal.manifest  baulkterminal.rc  baulkterminalenv.cc  baulktrace.cc  fs.hpp  vsenv.cc
tools/ssh-askpass-baulk/: CMakeLists.txt  app.cc  app.hpp  main.cc  resource.h  ssh-askpass-baulk.rc  version.h
tools/unscrew/: CMakeLists.txt  README.md  extractor.cc  extractor.hpp  mica.cc  progressbar.cc  progressbar.hpp  render.cc  resource.h  unscrew.cc  unscrew.hpp  unscrew.rc  utils.cc  window.cc  window.hpp
(+139 files in other folders)
